add-gallery-footer-section

--- a/index.html
+++ b/index.html
@@ -76,6 +76,14 @@
         </div>
       </section>
     </main>
+    <!-- Footer Section  -->
+    <footer class="text-center py-5 lg:py-20">
+      <h4 class="text-sm font-medium text-[#B9BDCF]">
+        created by 
+        <a class="font-bold" href="https://github.com/gmlincoln/">Golam Maula Lincoln</a> 
+        - devChallenges.io
+      </h4>
+    </footer>
 
 </body>
 </html>
